# RacingSimulator

./: .gitignore  CMakeLists.txt  RacingSimulator.sln
ImplementingClasses/: AirTransport.cpp  AirTransport.h  AllTerrainBoots.cpp  AllTerrainBoots.h  Broomstick.cpp  Broomstick.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  FlyingCarpet.cpp  FlyingCarpet.h  GroundTransportation.cpp  GroundTransportation.h  ImplementingClasses.vcxproj  ImplementingClasses.vcxproj.filters  Race.cpp  Race.h  Transport.h  TransportVehicle.cpp  TransportVehicle.h
MainProject/: Generator.cpp  Generator.h  ImplementingClasses.lib  MainProject.cpp  MainProject.vcxproj  MainProject.vcxproj.filters
